--- a/style.css
+++ b/style.css
@@ -12,3 +12,9 @@ body{
     left: 0px;
     width: 125px;
 }
+#msgBase{
+    color:#0C3B46;
+    text-align: center;
+    font-size: 30px;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
